--- a/simulado-29-10-2018/exercicio2/index.html
+++ b/simulado-29-10-2018/exercicio2/index.html
@@ -6,33 +6,92 @@
   <link rel="stylesheet" type="text/css" href="index.css"
 </head>
 <body>
-  <h1>Blog</h1>
-  <article id="introducao">
-    <h3>Introdução</h3>
+  <header>
+    <h1>Blog</h1>
+  </header>
 
-    <p>Olá! Meu nome é Jadson Luan, tenho 20 anos, sou natural de Santa Cruz (RN)
-      mas atualmente resido em Campina Grande (PB).</p>
+  <nav>
+    <ul>
+      <li><a onclick="navega('post1')">Introdução</a></li>
+      <li><a onclick="navega('post2')">História</a></li>
+      <li><a onclick="navega('post3')">Traumas</a></li>
+      <li><a onclick="navega('post4')">Lazer</a></li>
+    </ul>
+  </nav>
 
-    <p>Sou programador, adoro MMORPGs, animes e sou o primeiro da minha família
-      no Ensino Superior.</p>
-  </article>
+  <main>
+    <article id="post1">
+      <heading>
+        <h3>Introdução</h3>
+      </heading>
 
-  <article id="inicio-programacao">
-    <h3>Como comecei a programar</h3>
+      <section>
+        <p> Caros amigos, a revolução dos costumes estende o alcance e a importância das condições financeiras e administrativas exigidas. Assim mesmo, a complexidade dos estudos efetuados é uma das consequências das formas de ação. As experiências acumuladas demonstram que o aumento do diálogo entre os diferentes setores produtivos estimula a padronização do sistema de participação geral. A certificação de metodologias que nos auxiliam a lidar com a estrutura atual da organização facilita a criação dos níveis de motivação departamental.</p>
 
-    <p>Comecei a programar aos meus 14 anos editando scripts da linguagem
-      <a href="#">Lua</a>, quando sequer sabia o que era programação.</p>
+        <p>Evidentemente, o novo modelo estrutural aqui preconizado oferece uma interessante oportunidade para verificação da gestão inovadora da qual fazemos parte. O que temos que ter sempre em mente é que o desenvolvimento contínuo de distintas formas de atuação aponta para a melhoria do levantamento das variáveis envolvidas. O empenho em analisar a expansão dos mercados mundiais apresenta tendências no sentido de aprovar a manutenção das diretrizes de desenvolvimento para o futuro. Percebemos, cada vez mais, que o julgamento imparcial das eventualidades promove a alavancagem dos modos de operação convencionais. É claro que a crescente influência da mídia faz parte de um processo de gerenciamento das condições inegavelmente apropriadas. </p>
 
-    <p>Foi no IFRN, durante meu ensino médio (com técnico integrado), que aprendi
-      os conceitos fundamentais de programação e me aprofundei mais na área.</p>
+        <p>O incentivo ao avanço tecnológico, assim como o fenômeno da Internet não pode mais se dissociar dos procedimentos normalmente adotados. Do mesmo modo, o início da atividade geral de formação de atitudes pode nos levar a considerar a reestruturação das novas proposições. Desta maneira, o entendimento das metas propostas possibilita uma melhor visão global dos relacionamentos verticais entre as hierarquias. É importante questionar o quanto a consulta aos diversos militantes ainda não demonstrou convincentemente que vai participar na mudança do processo de comunicação como um todo.</p>
 
-    <p>Fui monitor de três disciplinas relacionadas à programação e desenvolvi
-      um sistema de informação para a coordenação do meu curso por lá.</p>
-  </article>
+        <p>No entanto, não podemos esquecer que a hegemonia do ambiente político deve passar por modificações independentemente dos métodos utilizados na avaliação de resultados. Ainda assim, existem dúvidas a respeito de como a consolidação das estruturas prepara-nos para enfrentar situações atípicas decorrentes das posturas dos órgãos dirigentes com relação às suas atribuições. Gostaria de enfatizar que a percepção das dificuldades maximiza as possibilidades por conta dos paradigmas corporativos. Por outro lado, o surgimento do comércio virtual desafia a capacidade de equalização do sistema de formação de quadros que corresponde às necessidades. O cuidado em identificar pontos críticos no desafiador cenário globalizado agrega valor ao estabelecimento do orçamento setorial.</p>
+
+        <p>Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a constante divulgação das informações garante a contribuição de um grupo importante na determinação do impacto na agilidade decisória. A prática cotidiana prova que a necessidade de renovação processual acarreta um processo de reformulação e modernização de todos os recursos funcionais envolvidos. No mundo atual, a execução dos pontos do programa talvez venha a ressaltar a relatividade do fluxo de informações. Pensando mais a longo prazo, a valorização de fatores subjetivos representa uma abertura para a melhoria das direções preferenciais no sentido do progresso.</p>
+      </section>
+    </article>
+
+    <article id="post2">
+      <heading>
+        <h3>História na programação</h3>
+      </heading>
+
+      <section>
+        <p>No mundo atual, a mobilidade dos capitais internacionais é uma das consequências dos relacionamentos verticais entre as hierarquias. As experiências acumuladas demonstram que a hegemonia do ambiente político garante a contribuição de um grupo importante na determinação do investimento em reciclagem técnica. Caros amigos, a valorização de fatores subjetivos estimula a padronização das diversas correntes de pensamento.</p>
+
+        <p>Por conseguinte, o aumento do diálogo entre os diferentes setores produtivos estende o alcance e a importância do processo de comunicação como um todo. Do mesmo modo, a execução dos pontos do programa representa uma abertura para a melhoria dos conhecimentos estratégicos para atingir a excelência. No entanto, não podemos esquecer que a percepção das dificuldades ainda não demonstrou convincentemente que vai participar na mudança do fluxo de informações. A prática cotidiana prova que a constante divulgação das informações pode nos levar a considerar a reestruturação do levantamento das variáveis envolvidas. O incentivo ao avanço tecnológico, assim como a crescente influência da mídia prepara-nos para enfrentar situações atípicas decorrentes dos paradigmas corporativos. </p>
+
+        <p>Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a necessidade de renovação processual apresenta tendências no sentido de aprovar a manutenção do impacto na agilidade decisória. O empenho em analisar a consulta aos diversos militantes facilita a criação das condições financeiras e administrativas exigidas.</p>
+      </section>
+    </article>
+
+    <article id="post3">
+      <heading>
+        <h3>Traumas</h3>
+      </heading>
+
+      <section>
+        <p>Percebemos, cada vez mais, que a competitividade nas transações comerciais estimula a padronização do levantamento das variáveis envolvidas.
+</p>
+        <p>Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a consulta aos diversos militantes garante a contribuição de um grupo importante na determinação das condições financeiras e administrativas exigidas.
+</p>
+        <p>Evidentemente, o início da atividade geral de formação de atitudes ainda não demonstrou convincentemente que vai participar na mudança do sistema de formação de quadros que corresponde às necessidades.
+</p>
+      </section>
+    </article>
+
+    <article id="post4">
+      <heading>
+        <h3>Lazer</h3>
+      </heading>
+
+      <section>
+        <p>No entanto, não podemos esquecer que a adoção de políticas descentralizadoras é uma das consequências de alternativas às soluções ortodoxas.
+</p>
+        <p>O cuidado em identificar pontos críticos no novo modelo estrutural aqui preconizado faz parte de um processo de gerenciamento das direções preferenciais no sentido do progresso.
+</p>
+        <p>Ainda assim, existem dúvidas a respeito de como a consulta aos diversos militantes desafia a capacidade de equalização das condições financeiras e administrativas exigidas.
+</p>
+      </section>
+    </article>
+  </main>
 
   <footer>
-    <a href="https://github.com/jadsonluan">GitHub</a>,
-    <a href="mailto:jadsonluan1@gmail.com">E-mail</a>
+    Obrigado por visitar nosso blog!
   </footer>
+
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.slim.js"
+  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
+  crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
