--- a/simulado-29-10-2018/exercicio2/index.html
+++ b/simulado-29-10-2018/exercicio2/index.html
@@ -12,10 +12,12 @@
 
   <nav>
     <ul>
+      <li class="active"><a href="#">Blog</a></li>
       <li><a onclick="navega('post1')">Introdução</a></li>
       <li><a onclick="navega('post2')">História</a></li>
       <li><a onclick="navega('post3')">Traumas</a></li>
       <li><a onclick="navega('post4')">Lazer</a></li>
+      <li><a href="imc">IMC</a></li>
     </ul>
   </nav>
 
@@ -59,11 +61,11 @@
 
       <section>
         <p>Percebemos, cada vez mais, que a competitividade nas transações comerciais estimula a padronização do levantamento das variáveis envolvidas.
-</p>
+        </p>
         <p>Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a consulta aos diversos militantes garante a contribuição de um grupo importante na determinação das condições financeiras e administrativas exigidas.
-</p>
+        </p>
         <p>Evidentemente, o início da atividade geral de formação de atitudes ainda não demonstrou convincentemente que vai participar na mudança do sistema de formação de quadros que corresponde às necessidades.
-</p>
+        </p>
       </section>
     </article>
 
@@ -74,11 +76,11 @@
 
       <section>
         <p>No entanto, não podemos esquecer que a adoção de políticas descentralizadoras é uma das consequências de alternativas às soluções ortodoxas.
-</p>
+        </p>
         <p>O cuidado em identificar pontos críticos no novo modelo estrutural aqui preconizado faz parte de um processo de gerenciamento das direções preferenciais no sentido do progresso.
-</p>
+        </p>
         <p>Ainda assim, existem dúvidas a respeito de como a consulta aos diversos militantes desafia a capacidade de equalização das condições financeiras e administrativas exigidas.
-</p>
+        </p>
       </section>
     </article>
   </main>
